update landing page v1

--- a/index.html
+++ b/index.html
@@ -224,13 +224,7 @@
         color: #323241;
       }
 
-      .burger-menu span{
-        display: block;
-        width: 25px;
-        height: 3px;
-        background-color: #000000;
-        margin-bottom: 5px;
-      }
+     
 
       /* end main style */
 
@@ -460,19 +454,20 @@
       </form>
     </main>
 
+    <!-- footer -->
     <footer>
       <div class="container">
         <div class="row">
           <div class="col col-lg-6 col-md-12 col-sm-12 col-12">
-            <div class="pj-name">bản sắc</div>
+            <!-- <div class="pj-name">bản sắc</div> -->
+            <a href class="pj-logo"><img src="./images/logo-footer.svg"/></a>
             <div class="pj-description">
-              Hành trình văn hóa số khơi dậy niềm tự hào dân tộc, kết nổi mọi
-              thể hệ người Việt Nam trong và ngoài nước.
+          Hành trình văn hóa số khơi dậy niềm tự hào dân tộc, kết nối mọi thế hệ người Việt Nam trong và ngoài nước.
             </div>
           </div>
           <div class="col col-lg-6 col-md-12 col-sm-12 col-12">
-            <div class="row">
-              <div class="col col-4">
+            <div class="row gy-4">
+              <div class="col col-lg-4 col-md-4 col-sm-12 col-12">
                 <div class="footer-b-t">Liên kết</div>
                 <ul class="list-connect">
                   <li><a href="#">Bảng xếp hạng Vodcast</a></li>
@@ -481,7 +476,7 @@
                   <li><a href="#">Liên hệ</a></li>
                 </ul>
               </div>
-              <div class="col col-4">
+              <div class="col col-lg-4 col-md-4 col-sm-12 col-12">
                 <div class="footer-b-t">Thông tin liên hệ</div>
                 <ul class="list-contact">
                   <li>
@@ -496,7 +491,7 @@
                   </li>
                 </ul>
               </div>
-              <div class="col col-4">
+              <div class="col col-lg-4 col-md-4 col-sm-12 col-12">
                 <div class="footer-b-t">Theo dõi</div>
                 <ul class="list-social">
                   <li>
@@ -522,9 +517,8 @@
         <div class="copyright">
           <p>© 2025 Bản quyền thuộc về Ban Tổ chức chương trình</p>
           <ul>
-            <li>Privacy Policy</li>
-            <li>Terms of Use</li>
-            <li>Legal</li>
+            <li><a>Chính sách bảo mật</a></li>
+            <li><a>Điều khoản bảo mật</a></li>
           </ul>
         </div>
       </div>
