--- a/landing.html
+++ b/landing.html
@@ -1199,6 +1199,7 @@
 
               .prize-title2{
                 font-size: 40px;
+                line-height: 50px;
               }
 
               .prize-text br{
@@ -1216,6 +1217,7 @@
                .rule-title{
                 font-size: 36px;
                 margin-bottom: 24px;
+                line-height: 50px;
                }
 
                .rule-sub-title{
@@ -1227,12 +1229,18 @@
                 text-align: center;
                }
 
+
+               .sf-btn-group .btn-share{
+                width: fit-content;
+               }
+
                .host{
                 background-position: left center;
                }
 
                .qa-title{
                 font-size: 36px;
+                margin-bottom: 48px;
                }
 
                .qa-content-title{
@@ -1251,6 +1259,30 @@
                .swiper-ctn{
                 height: fit-content;
                }
+
+               .main-route-ctn{
+                padding-top: 350px;
+              }
+
+              .intro{
+                background-size: 300px auto;
+                background-position: top 100px right;
+              }
+
+              .intro .container,
+              .prize .container,
+              .route .container,
+              .rule .container,
+              .host .container,
+              .qa .container{
+                padding-top: 48px;
+                padding-bottom: 48px;
+              }
+
+              .dashed-divider{
+                margin-bottom: 40px;
+                margin-top: 40px;
+              }
               
            }
 
@@ -1889,8 +1921,7 @@ Hiểu biết Bản sắc</p>
 
     <div class="scroll-footer">
           <div class="sf-btn-group">
-            <a href class="btn-share">Bình chọn vodcast</a>
-            <a href class="btn-share">Đố vui Bản sắc</a>
+            <a href class="btn-share">gửi bài dự thi vodcast</a>
           </div>
           <img class="left-cloud" src="./images/left-cloud.png">
           <img class="right-cloud" src="./images/right-cloud.png">
