change button size on mobile

--- a/landing.html
+++ b/landing.html
@@ -1232,6 +1232,9 @@
 
                .sf-btn-group .btn-share{
                 width: fit-content;
+                font-size: 12px;
+                padding: 6px 16px;
+                line-height: 24px;
                }
 
                .host{
@@ -1283,6 +1286,8 @@
                 margin-bottom: 40px;
                 margin-top: 40px;
               }
+
+
               
            }
 
@@ -1391,8 +1396,8 @@
             <p class="hero-description">
               Khám phá bản thân • Tôn vinh văn hóa • Lan tỏa tri thức
             </p>
-            <a href class="btn-register-hero">Bình chọn vodcast</a>
-            <a href class="btn-register-hero hidden">Gửi bài dự thi vodcast</a>
+            <a href class="btn-register-hero hidden">Bình chọn vodcast</a>
+            <a href class="btn-register-hero ">Gửi bài dự thi vodcast</a>
             <a href class="btn-register-hero hidden">Đố vui Bản sắc</a>
             <a href class="btn-register-hero hidden">xem bảng xếp hạng</a>
           </div>
