--- a/landing.html
+++ b/landing.html
@@ -1265,6 +1265,7 @@
 
                .main-route-ctn{
                 padding-top: 350px;
+                height: 640px;
               }
 
               .intro{
